app/assets/stylesheets/components/_splash_dog_preview_item.scss
$yelp-font: Helvetica Neue,Helvetica,Arial,sans-serif;
$yelp-blue: #0073bb;
$yelp-red: #d32323;
$yelp-lighter-border: #e6e6e6;
$yelp-grey: #666;
$yelp-orange: #f15c00;

.splash-dog-preview-item-container {
  display: flex;
  font-family: $yelp-font;
  flex-direction: column;
  height: 350px;
  width: 300px;
  border: 1px solid $yelp-lighter-border;
  border-radius: 4px;
  margin: 30px;

  img {
    object-fit: cover;
    height: 215px;
    width: 100%;
    cursor: pointer;
  }
}

.splash-dog-preview-item-text {
  display: flex;
  flex-direction: column;
  margin: 10px;

  a {
    width: 100%;
  }

  h3 {
    color: $yelp-blue;
    margin-bottom: 5px;
    font-size: 18px;
    font-weight: 600;
  }

  h3:hover {
    text-decoration: underline;
  }

  .splash-dog-preview-stars {
    display: flex;


    div {
      align-self: center;
    }

    img {
      width: 100px;
      height: 100%;
      margin-right: 10px;
      align-content: center;
    }

    span {
      color: #666;
    }
  }

  .splash-dog-preview-types {
    font-size: 14px;
    margin-top: 5px;
  }

  .splash-dog-preview-fire {
    color: $yelp-orange;
    font-size: 14px;
    margin-top: 10px;
    i {
      margin-right: 5px;
      font-size: 18px;
    }
  }
}

.splash-dog-preview-item-container:hover {
  background: #EAEAEA;
  z-index: 1;
  transition: all .3s ease-out;
}

